[gd_scene load_steps=100 format=2]

[ext_resource path="res://SantaSil.gd" type="Script" id=1]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-71.png" type="Texture" id=2]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-79.png" type="Texture" id=3]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-82.png" type="Texture" id=4]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-85.png" type="Texture" id=5]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-86.png" type="Texture" id=6]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-94.png" type="Texture" id=7]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-95.png" type="Texture" id=8]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-74.png" type="Texture" id=9]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-63.png" type="Texture" id=10]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-66.png" type="Texture" id=11]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-70.png" type="Texture" id=12]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-72.png" type="Texture" id=13]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-17.png" type="Texture" id=14]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-40.png" type="Texture" id=15]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-56.png" type="Texture" id=16]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-81.png" type="Texture" id=17]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-87.png" type="Texture" id=18]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-88.png" type="Texture" id=19]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-91.png" type="Texture" id=20]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-1.png" type="Texture" id=21]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-43.png" type="Texture" id=22]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-48.png" type="Texture" id=23]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-34.png" type="Texture" id=24]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-38.png" type="Texture" id=25]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-31.png" type="Texture" id=26]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-11.png" type="Texture" id=27]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-12.png" type="Texture" id=28]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-51.png" type="Texture" id=29]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-50.png" type="Texture" id=30]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-39.png" type="Texture" id=31]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-7.png" type="Texture" id=32]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-29.png" type="Texture" id=33]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-24.png" type="Texture" id=34]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-28.png" type="Texture" id=35]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-30.png" type="Texture" id=36]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-22.png" type="Texture" id=37]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-23.png" type="Texture" id=38]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-18.png" type="Texture" id=39]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-19.png" type="Texture" id=40]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-20.png" type="Texture" id=41]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-16.png" type="Texture" id=42]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-2.png" type="Texture" id=43]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-5.png" type="Texture" id=44]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-6.png" type="Texture" id=45]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-55.png" type="Texture" id=46]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-58.png" type="Texture" id=47]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-65.png" type="Texture" id=48]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-67.png" type="Texture" id=49]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-68.png" type="Texture" id=50]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-69.png" type="Texture" id=51]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-73.png" type="Texture" id=52]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-75.png" type="Texture" id=53]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-76.png" type="Texture" id=54]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-78.png" type="Texture" id=55]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-83.png" type="Texture" id=56]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-84.png" type="Texture" id=57]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-89.png" type="Texture" id=58]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-92.png" type="Texture" id=59]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-15.png" type="Texture" id=60]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-21.png" type="Texture" id=61]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-53.png" type="Texture" id=62]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-3.png" type="Texture" id=63]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-46.png" type="Texture" id=64]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-52.png" type="Texture" id=65]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-10.png" type="Texture" id=66]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-44.png" type="Texture" id=67]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-9.png" type="Texture" id=68]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-13.png" type="Texture" id=69]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-35.png" type="Texture" id=70]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-33.png" type="Texture" id=71]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-54.png" type="Texture" id=72]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-4.png" type="Texture" id=73]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-47.png" type="Texture" id=74]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-27.png" type="Texture" id=75]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-8.png" type="Texture" id=76]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-49.png" type="Texture" id=77]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-26.png" type="Texture" id=78]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-14.png" type="Texture" id=79]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-32.png" type="Texture" id=80]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-61.png" type="Texture" id=81]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-64.png" type="Texture" id=82]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-59.png" type="Texture" id=83]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-45.png" type="Texture" id=84]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-60.png" type="Texture" id=85]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-62.png" type="Texture" id=86]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-42.png" type="Texture" id=87]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-0.png" type="Texture" id=88]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-57.png" type="Texture" id=89]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-36.png" type="Texture" id=90]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-41.png" type="Texture" id=91]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-25.png" type="Texture" id=92]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-37.png" type="Texture" id=93]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-77.png" type="Texture" id=94]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-80.png" type="Texture" id=95]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-90.png" type="Texture" id=96]
[ext_resource path="res://Santa/45336bf2d2c94e0cb7d11bc3a644b50eYUDLMJjn3Y2DA0wA-93.png" type="Texture" id=97]
[ext_resource path="res://Assets/Audio/hohoho.mp3" type="AudioStream" id=98]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 88 ), ExtResource( 21 ), ExtResource( 43 ), ExtResource( 63 ), ExtResource( 73 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 32 ), ExtResource( 76 ), ExtResource( 68 ), ExtResource( 66 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 69 ), ExtResource( 79 ), ExtResource( 60 ), ExtResource( 42 ), ExtResource( 14 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 61 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 34 ), ExtResource( 92 ), ExtResource( 78 ), ExtResource( 75 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 36 ), ExtResource( 26 ), ExtResource( 80 ), ExtResource( 71 ), ExtResource( 24 ), ExtResource( 70 ), ExtResource( 90 ), ExtResource( 93 ), ExtResource( 25 ), ExtResource( 31 ), ExtResource( 15 ), ExtResource( 91 ), ExtResource( 87 ), ExtResource( 22 ), ExtResource( 67 ), ExtResource( 84 ), ExtResource( 64 ), ExtResource( 74 ), ExtResource( 23 ), ExtResource( 77 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 65 ), ExtResource( 62 ), ExtResource( 72 ), ExtResource( 46 ), ExtResource( 16 ), ExtResource( 89 ), ExtResource( 47 ), ExtResource( 83 ), ExtResource( 85 ), ExtResource( 81 ), ExtResource( 86 ), ExtResource( 10 ), ExtResource( 82 ), ExtResource( 48 ), ExtResource( 11 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 13 ), ExtResource( 52 ), ExtResource( 9 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 94 ), ExtResource( 55 ), ExtResource( 3 ), ExtResource( 95 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 58 ), ExtResource( 96 ), ExtResource( 20 ), ExtResource( 59 ), ExtResource( 97 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[node name="SantaSil" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.12549, 0.129412, 0.14902, 1 )
position = Vector2( 1143.8, 65.7378 )
rotation = -0.261799
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
frame = 71
playing = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -175.82, 66.5264 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="startingTimer" type="Timer" parent="."]
one_shot = true

[node name="HoHoHo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 98 )
volume_db = -25.616

[node name="NoNoNoTimer" type="Timer" parent="."]
one_shot = true

[node name="HoHoHoTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="startingTimer" to="." method="_on_startingTimer_timeout"]
[connection signal="timeout" from="NoNoNoTimer" to="." method="_on_NoNoNoTimer_timeout"]
[connection signal="timeout" from="HoHoHoTimer" to="." method="_on_HoHoHoTimer_timeout"]
